# mivaa-pdf-extractor

./: .coveragerc  .deployment-trigger  .dockerignore  .env.backup  .gitignore  .python-version  =0.0.12  =0.0.6  =0.104.1  =0.24.0  =0.25.0  =0.3.10  =0.8.0  =0.9.0  =1.0.0  =1.11.0  =1.24.0  =1.3.0  =1.7.0  =10.0.0  =2.0.0  =2.2.0  =2.3.0  =2.31.0  =2.8.0  =23.0.0  =4.0.0  =4.35.0  =4.8.0  =41.0.0  API_DOCUMENTATION.md  Aptfile  CLEANUP-SUMMARY.md  DEPLOYMENT_OPTIMIZATION.md  DEPLOYMENT_OVERVIEW_SUMMARY.md  DEPLOYMENT_QUICK_REFERENCE.md  DOCUMENTATION_FIX_SUMMARY.md  Dockerfile  ENDPOINT_UPDATE_SUMMARY.md  FINAL_AUDIT_REPORT.md  (+86 more)
.github/workflows/: automated-diagnostics.yml  build-and-push.yml  check-requirements.yml  deploy-check.yml  deploy-modal.yml  deploy-uv.yml  deploy.bak  deploy.yml  detach.yaml  intelligent-change-detection.yml  intelligent-dependency-management.yml  k8s-deploy.yml  orchestrated-deployment.yml  test-pdf-extraction.yml  update-openapi.yml
app/: __init__.py  config.py  dependencies.py  main.py  orchestration.py
app/api/: __init__.py  admin.py  admin.py.backup  admin.py.backup2  admin.py.backup4  admin_linking.py  admin_prompts.py  admin_restart_routes.py  agent_routes.py  ai_metrics_routes.py  ai_services_routes.py  anthropic_routes.py  catalog_routes.py  category_prototypes.py  chunk_quality_routes.py  data_import_routes.py  document_entities.py  documents.py  duplicate_detection_routes.py  embeddings.py  facet_routes.py  health.py  images.py  images.py.backup  images_old_messy.py  interior_design_routes.py  internal_routes.py  job_health_routes.py  job_research_routes.py  job_tracking_routes.py  knowledge_base.py  logs_routes.py  mention_monitoring_routes.py  mention_tracking_routes.py  metadata.py  modules_control.py  monitoring_routes.py  pdf_routes.py  price_lookup_routes.py  price_monitoring_routes.py  (+23 more)
app/config/: __init__.py  ai_pricing.py  confidence_thresholds.py  rate_limits.py
app/core/: __init__.py  extractor.py
app/database/: __init__.py  connection.py
app/middleware/: __init__.py  error_logging.py  json_serialization.py  jwt_auth.py  validation.py
app/models/: __init__.py  ai_config.py  (+4 more)
deploy/: PRODUCTION-DEPLOYMENT.md  README.md  SSL_DEPLOYMENT_GUIDE.md  setup-server.sh
docs/: ARCHITECTURAL_CONSISTENCY_REVIEW.md  DEDUPLICATION_STRATEGY.md  JOB-RECOVERY-AND-SIGNAL-HANDLING.md  MULTIMODAL_LIBRARIES_RESEARCH.md  deployment-overview.md  droplet-auto-scaling.md  pdf-processing-flow-analysis.md  restart-protection-setup.md
k8s/: README.md  TESTING-GUIDE.md  check-and-cleanup.sh  cleanup-infrastructure.sh  cleanup-old-loadbalancer.sh  complete-setup.sh  configmap.yaml  create-secrets-local.ps1  delete-cluster.sh  deployment.yaml  enable-node-autoscaling.sh  hpa.yaml  ingress.yaml  keda-scaledobject.yaml  pdb.yaml  service.yaml
migrations/: add_prompt_templates.sql  create_admin_search_prompts_table.sql  drop_document_images_embedding_columns.sql
modal_app/: README.md  paddleocr_vl.py  slig.py  surya_vllm.py
scripts/: README.md  _debug_page15_spans.py  block-unsafe-restart.sh  check_endpoint_status.py  clear_jobs_before_deployment.py  configure-docs-secrets.sh  deploy-with-nginx.sh  deploy.sh  deployment_verification.py  droplet-resize.sh  enable-docs.sh  fix_missing_relationships.py  generate_openapi.py  generate_prototype_embeddings.py  install-dependencies.sh  install-deps-now.sh  migrate-to-docker.sh  normalize_existing_metadata.py  populate_category_prototypes.py  populate_material_properties.py  prepare-deployment-deps.ps1  prepare-deployment-deps.sh  run_migration.py  run_tests.py  safe-restart.sh  seed_default_prompts.py  seed_facet_canonicals.py  test-deployment-optimization.sh  test_full_workflow.sh  update-requirements.sh  validate-deployment-readiness.py  validate-deployment.py  verify-docs.sh
test-scripts/: nova-product-focused-test.mjs  reset-database-complete.js  run-cleanup.sh  run-nova-test.sh
tests/: TEST_REPORT_IMAGE_PROCESSING.md  __init__.py  conftest.py  test_prompt_enhancement.py  test_spaceformer.py
(+476 files in other folders)
